--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ body {
   color: #000;
 }
 
-h4 {
-  margin: 0;
-}
-
 a:link {
   color: #000;
   font-weight: 400;
@@ -94,32 +90,12 @@ nav li:hover a {
   text-decoration-line: underline;
 }
 
-/* Hide dropdown links until they are needed */
-
-nav li ul {
-  display: none;
-}
-
-/* Make dropdown links vertical */
-
-nav li ul li {
-  display: block;
-  float: none;
-}
-
 /* Prevent text wrapping */
 
 nav li ul li a {
   width: auto;
   min-width: 100px;
   padding: 0 20px;
-}
-
-/* Display the dropdown on hover */
-
-nav ul li a:hover + .hidden,
-.hidden:hover {
-  display: block;
 }
 
 /* Responsive Styles */
@@ -130,11 +106,6 @@ nav ul li a:hover + .hidden,
     position: static;
 
     /* display: none; */
-  }
-
-  /* Create vertical spacing */
-  li {
-    margin-bottom: 1px;
   }
 
   /* Make all menu links full width */
@@ -192,113 +163,33 @@ iframe {
 /* ** GALLERY ** */
 
 .container {
-  display: grid;
-  padding: 40px 0 60px 0;
-  grid-template-columns: 1fr;
-  grid-gap: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 770px) {
-  .container {
-    grid-template-columns: repeat(3, 1fr);
-    padding: 20px 0 60px 0;
-  }
-
-  .item-modul-r-1 {
-    grid-column-start: 1;
-  }
-
-  .item-modul-r-2 {
-    grid-column-start: 2;
-  }
-
-  .item-modul-r-3 {
-    grid-column-start: 3;
-  }
-}
-
-.item-gverila-5 {
-  grid-column-start: 3;
-}
-
-.item-gverila-6 {
-  grid-column-start: 2;
-}
-
-.item-abs1-2 {
-  grid-column-start: 2;
-}
-
-.item-abs1-2 {
-  grid-column-start: 3;
-}
-
-.item-abs1-3 {
-  grid-column-start: 2;
-}
-
-.item-abs1-7 {
-  grid-column-start: 3;
-  grid-row-start: 4;
-}
-
-.item-stalk-5 {
-  grid-column-start: 3;
-}
-
-.item-stalk-6 {
-  grid-column-start: 2;
-}
-
-.item-abs2-5 {
-  grid-column-start: 3;
-}
-
-.item-abs2-8 {
-  grid-column-start: 2;
-}
-
+  
 @media only screen and (min-width: 400px) {
   .container {
-    grid-template-columns: 1;
   }
 }
 /* ** MASONRY RESPONSIVE ** */
 
 @media only screen and (min-width: 400px) {
-  .masonry {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
 }
 
 @media only screen and (min-width: 700px) {
-  .masonry {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
+
 }
 
 @media only screen and (min-width: 900px) {
-  .masonry {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
+
 }
 
 @media only screen and (min-width: 1100px) {
-  .masonry {
-    -moz-column-count: 5;
-    -webkit-column-count: 5;
-    column-count: 5;
-  }
+
 }
 
 @media only screen and (min-width: 1280px) {
-  .wrapper {
-    width: 1260px;
-  }
+
 }
