--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,6 @@ a:link {
   font-weight: bold;
 }
 
-footer {
-  font: 0.75em/1.67 Helvetica, Arial, sans-serif;
-  padding-top: 3em;
-}
-
 .module {
   list-style: none;
 }
@@ -84,8 +79,6 @@ nav li a {
   text-decoration: none;
 }
 
-/* Hover state for top level links */
-
 nav li:hover a {
   text-decoration-line: underline;
 }
@@ -98,13 +91,17 @@ nav li ul li a {
   padding: 0 20px;
 }
 
+footer {
+  font: 0.75em/1.67 Helvetica, Arial, sans-serif;
+  padding-top: 3em;
+}
+
 /* Responsive Styles */
 
 @media screen and (max-width: 760px) {
   /* Make dropdown links appear inline */
   ul {
     position: static;
-
     /* display: none; */
   }
 
@@ -115,97 +112,37 @@ nav li ul li a {
   }
 }
 
-/* ** HOMEPAGE MASONRY ** */
-
-img,
-iframe {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
 .wrapper {
   width: 95%;
   margin: 1.5em auto;
 }
 
-
-.item {
-  display: inline-block;
-  background: #fff;
-  padding: 0.5em 1.5em 0.5em 1.5em;
-  margin: 0;
-  width: 100%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-
-.item p {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-/* ** GALLERY ** */
-
 .container {
-margin: 15px;
+  display: grid;
+  grid-template-columns: 300px 300px;
+  grid-gap: 10px;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.left-column {
-  background-color: blue;
-  height: auto;
-}
-
-.right-column {
-  background-color: green;
-  height: auto;
+.box {
 }
 
 @media (min-width: 770px) {
-  
-@media only screen and (min-width: 400px) {
-  .container {
-  }
 }
-/* ** MASONRY RESPONSIVE ** */
+
+@media only screen and (min-width: 400px) {
+}
 
 @media only screen and (min-width: 400px) {
 }
 
 @media only screen and (min-width: 700px) {
-
 }
 
 @media only screen and (min-width: 900px) {
-
 }
 
 @media only screen and (min-width: 1100px) {
-
 }
 
 @media only screen and (min-width: 1280px) {
-
 }
