--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* ** BASIC STYLING ** */
 
 body {
-  font: 1em/1.3 "Cormorant Garamond", serif;
-  margin: 0;
+  font: 1em/1.3 Helvetica, Arial, sans-serif;
+  margin: 15px;
   font-size: 1.2em;
   background: #fff;
   color: #000;
@@ -16,7 +16,6 @@ a:link {
 
 .about a:hover {
   color: #00f;
-  font-weight: bold;
 }
 
 .about a:visited {
