--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* ** BASIC STYLING ** */
 
 body {
-  font: 1em/1.3 Helvetica, Arial, sans-serif;
+  font: 1em/1.3 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 15px;
   font-size: 1.2em;
   background: #fff;
@@ -31,12 +31,7 @@ a:link {
   padding-bottom: 1em;
 }
 
-.about p {
-  font-family: Helvetica, Arial, sans-serif;
-}
-
 .ul-about {
-  font-family: Helvetica, Arial, sans-serif;
   list-style: none;
   padding-left: 0;
 }
@@ -72,7 +67,6 @@ nav li a {
   height: 50px;
   text-align: left;
   line-height: 50px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #000;
   background: #fff;
   text-decoration: none;
@@ -91,7 +85,7 @@ nav li ul li a {
 }
 
 footer {
-  font: 0.75em/1.67 Helvetica, Arial, sans-serif;
+  font-size: 0.75em;
   padding-top: 3em;
 }
 
@@ -124,7 +118,6 @@ footer {
 }
 
 .box {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.2em;
 }
 .box img {
