--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 /* ** BASIC STYLING ** */
 
 body {
-  font: 1em/1.3 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 15px;
+  font: 1em/1.1 "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.2em;
   background: #fff;
   color: #000;
@@ -11,9 +10,11 @@ body {
 a:link {
   color: #000;
   font-weight: 400;
-  font-size: 1.5em;
 }
 
+.about {
+  font-size: 1.3em;
+}
 .about a:hover {
   color: #00f;
 }
@@ -38,8 +39,6 @@ a:link {
 
 /* ** NAVIGATION ** */
 
-/* Strip the ul of padding and list styling */
-
 nav {
   padding-bottom: 3em;
 }
@@ -63,9 +62,10 @@ nav li {
 
 nav li a {
   display: block;
-  min-width: 205px;
+  min-width: 250px;
   height: 50px;
   text-align: left;
+  font-size: 2.3em;
   line-height: 50px;
   color: #000;
   background: #fff;
@@ -107,7 +107,7 @@ footer {
 
 .wrapper {
   width: 90%;
-  margin: 1.5em auto;
+  margin: 0em;
 }
 
 .container {
@@ -119,6 +119,11 @@ footer {
 
 .box {
   font-size: 1.2em;
+}
+
+.box p {
+  font-size: 1.3em;
+  margin-top: 0px;
 }
 .box img {
   width: 500px;
@@ -135,7 +140,7 @@ footer {
   }
 
   .box-top {
-    padding-top: 30px;
+    padding-top: 60px;
   }
   /* Make all menu links full width */
   ul li,
