improve layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:link {
 }
 
 .wrapper {
-  width: 90%;
+  width: 100%;
   margin: 0em;
 }
 
@@ -124,5 +124,9 @@ footer {
   ul li,
   li a {
     width: 90%;
+  }
+
+  .about p {
+    font-size: 1em !important;
   }
 }
